src/wasm-lib/kcl/tests/non_string_key_of_object/execution_error.snap
---
source: kcl/src/simulation_tests.rs
description: Error from executing non_string_key_of_object.kcl
---
KCL Semantic error

  × semantic: Only strings can be used as the property of an object, but
  │ you're using a number
   ╭─[2:7]
 1 │ obj = { key = 123 }
 2 │ num = obj[3]
   ·       ───┬──
   ·          ╰── tests/non_string_key_of_object/input.kcl
   ╰────
